--- a/FukukouOuDtConnector/FukukouOuDtConnector.csproj
+++ b/FukukouOuDtConnector/FukukouOuDtConnector.csproj
@@ -45,6 +45,7 @@
     <Compile Include="PluginInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Round1_2025_I.cs" />
+    <Compile Include="Round2_2025_NextJsonData.cs" />
     <Compile Include="Round1_2025_USEDQJSONData.cs" />
     <Compile Include="Round1_I.cs" />
     <Compile Include="Round1_I_ScoreConfig.cs" />
@@ -54,6 +55,8 @@
     <Compile Include="Round1_2025_NextJsonData.cs" />
     <Compile Include="Round1_next_roundJSONData.cs" />
     <Compile Include="Round2_2025_JSONData.cs" />
+    <Compile Include="Round2_2025_I.cs" />
+    <Compile Include="Round2_2025_JSONData_REQ.cs" />
     <Compile Include="Round3_I.cs" />
     <Compile Include="Round2_I.cs" />
     <Compile Include="Round3_I_ScoreConfig.cs" />
